feat: 新增各浏览器的默认样式插件

--- a/src/css/base.less
+++ b/src/css/base.less
@@ -1,3 +1,5 @@
+@import 'normalize.css';
+
 *{
     margin: 0;
     padding: 0;
@@ -9,6 +11,8 @@ body,
   height: 100%;
   font-size: 26px;
   background: #f4f4f4;
+  -webkit-font-smoothing:antialiased; //字体抗锯齿，字体更清晰
+  -moz-osx-font-smoothing:grayscale;
 }
 .pt10 {
     padding-top: 10px;
