--- a/src/css/base.less
+++ b/src/css/base.less
@@ -1,9 +1,9 @@
 @import 'normalize.css';
 
-*{
-    margin: 0;
-    padding: 0;
-}
+// *{
+//     margin: 0;
+//     padding: 0;
+// }
 html,
 body,
 #app {
