feat: 首页逻辑处理

--- a/src/css/base.less
+++ b/src/css/base.less
@@ -10,7 +10,7 @@ body,
   width: 100%;
   height: 100%;
   font-size: 26px;
-  background: #f4f4f4;
+//   background: #f4f4f4;
   -webkit-font-smoothing:antialiased; //字体抗锯齿，字体更清晰
   -moz-osx-font-smoothing:grayscale;
 }
